--- a/stylesheet.css
+++ b/stylesheet.css
@@ -158,7 +158,7 @@ nav ul li a:hover {
 } */
 
 .img1 {
-    background-image: url(/CrazyCars/images/city-400_300-1.webp);
+    background-image: url(/images/city-400_300-1.webp);
 }
 
 .status,
